--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,178 +1,181 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta charset="utf-8">
-	<!-- <meta http-equiv="Content-Script-Type" content="text/javascript"> -->
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
-	<title>UI캠프 실습</title>
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/test.css">
+  <meta charset="utf-8">
+  <!-- <meta http-equiv="Content-Script-Type" content="text/javascript"> -->
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
+  <title>UI캠프 실습</title>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/test.css">
 
-	<style>
-	header {
-		width:100%;
-		height:100%;
-	}
+  <style>
+    header {
+      width:100%;
+      height:100%;
+    }
 
-	footer {
-		width:100%;
-		height:100px;
-	}
-
-
-	.banner {
-		width: 100%;
-		min-width: 1000px;
-		height: 430px;
-		background: url(img/banner.jpg) 50% 0 no-repeat;
-	}
+    footer {
+      width:100%;
+      height:100px;
+    }
 
 
-	.section1 {
-		position: relative;
-		width: 100%;
-		min-width: 1000px;
-		height: 725px;
-		background: url(img/section1.jpg) 50% 0 no-repeat;
-	}
+    .banner {
+      width: 100%;
+      min-width: 1000px;
+      height: 430px;
+      background: url(img/banner.jpg) 50% 0 no-repeat;
+    }
 
 
-	.section1_text {
-		word-break: normal;
-		text-align: center;
-		margin-bottom: 50px;
-		width:100%;
-	}
+    .section1 {
+      position: relative;
+      width: 100%;
+      min-width: 1000px;
+      height: 725px;
+      background: url(img/section1.jpg) 50% 0 no-repeat;
+    }
 
 
-	.section1_text .txt_area {
-		font-family: 'Nanum Gothic', sans-serif!important;
-		font-size: 18px;
-		line-height:26px;
-		letter-spacing: -1px;
-		color: #4465aa;
-		word-break: normal;
-	}
-
-	.section1 .First_Account_Enrollment {
-		position: absolute;
-		bottom: 29%;
-		left: 52%;
-		margin: 2px 0px 5px -1px;
-		width: 457px;
-		height: 67px;
-	}
-
-	.section1 .Total_Account_Enrollment {
-		position: absolute;
-		bottom: 50%;
-		left: 52%;
-		margin: 2px 0px 5px -1px;
-		width: 455px;
-		height: 67px;
-	}
+    .section1_text {
+      word-break: normal;
+      text-align: center;
+      margin-bottom: 50px;
+      width:100%;
+    }
 
 
-	.section2 {
-		position: relative;
-		width: 100%;
-		min-width: 1000px;
-		height: 280px;
-		background:#f1fef4 url(img/section2.jpg) 50% 0 no-repeat;
-	}
+    .section1_text .txt_area {
+      font-family: 'Nanum Gothic', sans-serif!important;
+      font-size: 18px;
+      line-height:26px;
+      letter-spacing: -1px;
+      color: #4465aa;
+      word-break: normal;
+    }
 
-	.section3 {
-		position: relative;
-		width: 100%;
-		min-width: 1000px;
-		height: 280px;
-		background:#fcf2f4 url(img/section3.jpg) 50% 0 no-repeat;
-	}
+    .section1 .First_Account_Enrollment {
+      position: absolute;
+      bottom: 29%;
+      left: 52%;
+      margin: 2px 0px 5px -1px;
+      width: 457px;
+      height: 67px;
+    }
 
-	.section2 .more_btn {
-		position: absolute;
-		bottom: 16%;
-		left: 51%;
-		width: 154px;
-		height: 42px;
-		margin-left: 10px;
-	}
-
-	.section3 .more_btn {
-		position: absolute;
-		bottom: 9%;
-		left: 51%;
-		width: 154px;
-		height: 42px;
-		margin-left: 10px;
-	}
+    .section1 .Total_Account_Enrollment {
+      position: absolute;
+      bottom: 50%;
+      left: 52%;
+      margin: 2px 0px 5px -1px;
+      width: 455px;
+      height: 67px;
+    }
 
 
-	.section4 {
-		position: relative;
-		width: 100%;
-		min-width: 1000px;
-		background:url(img/section4.jpg) 50% 0 no-repeat;
-		height: 570px;
-	}
+    .section2 {
+      position: relative;
+      width: 100%;
+      min-width: 1000px;
+      height: 280px;
+      background:#f1fef4 url(img/section2.jpg) 50% 0 no-repeat;
+    }
 
 
-	.section4 .Referrer_input_button{
-		position: absolute;
-		bottom: 12%;
-		left: 52%;
-		width: 455px;
-		height: 68px;
-	}
+    .section3 {
+      position: relative;
+      width: 100%;
+      min-width: 1000px;
+      height: 280px;
+      background:#fcf2f4 url(img/section3.jpg) 50% 0 no-repeat;
+    }
 
-	.section5 {
-		position: relative;
-		width: 100%;
-		min-width: 1000px;
-		padding-left: calc(50% - 490px);
-	}
-
-
-	.section5 .notice {
-		background: #f3f5f7;
-		width: 920px;
-		padding: 30px 0px 30px 40px;
-	}
-
-	.section5 .notice strong{
-		margin-left: -8px;
-		line-height:30px;
-	}
-	.section5 .notice li{
-		line-height:24px;
-	}
+    .section2 .more_btn {
+      position: absolute;
+      bottom: 16%;
+      left: 51%;
+      width: 154px;
+      height: 42px;
+      margin-left: 10px;
+    }
 
 
-	.section6 {
-		position: relative;
-		width: 100%;
-		min-width: 1000px;
-		height: 402px;
-		background: url(img/section6.jpg) 50% 0 no-repeat;
-	}
+    .section3 .more_btn {
+      position: absolute;
+      bottom: 9%;
+      left: 51%;
+      width: 154px;
+      height: 42px;
+      margin-left: 10px;
+    }
 
 
-	.section_rolling li {
-		display: inline-block;
-	}
-
-	.footer {
-		margin-top: 100px;
-	}
-
-	.tit_other {
-		font-size: 30px;
-		
-
-	}
+    .section4 {
+      position: relative;
+      width: 100%;
+      min-width: 1000px;
+      background:url(img/section4.jpg) 50% 0 no-repeat;
+      height: 570px;
+    }
 
 
-	</style>
+    .section4 .Referrer_input_button{
+      position: absolute;
+      bottom: 12%;
+      left: 52%;
+      width: 455px;
+      height: 68px;
+    }
+
+
+    .section5 {
+      position: relative;
+      width: 100%;
+      min-width: 1000px;
+      padding-left: calc(50% - 490px);
+    }
+
+
+    .section5 .notice {
+      background: #f3f5f7;
+      width: 920px;
+      padding: 30px 0px 30px 40px;
+    }
+
+    .section5 .notice strong{
+      margin-left: -8px;
+      line-height:30px;
+    }
+    .section5 .notice li{
+      line-height:24px;
+    }
+
+
+    .section6 {
+      position: relative;
+      width: 100%;
+      min-width: 1000px;
+      height: 402px;
+      background: url(img/section6.jpg) 50% 0 no-repeat;
+    }
+
+
+    .section_rolling li {
+      display: inline-block;
+    }
+
+    .footer {
+      margin-top: 100px;
+    }
+
+    .tit_other {
+      font-size: 30px;
+
+
+    }
+
+
+  </style>
 
 </head>
 
@@ -182,130 +185,148 @@
 
 <body>
 
-	<header>
+  <header>
 
-	</header>
-
-
-
-	<div class="banner">
-
-		<h2>친구야, 계좌결제 아직도 안쓰니?</h2>
-		<strong>첫 계좌등록하고 500원, 친구추천하고 200원씩 받자!</strong>
-
-
-	</div>
-
-	<div class="section1">
-		<h3>네이버페이 생에 첫 계좌등록시 500원, 통합계좌조회 하고 첫 등록하면 추가 500원 지급!</h3>
-		<strong>지금 바로 등록하세요! 롸잇나~우!</strong>
-		<p>실명확인 기준으로 첫 계좌등록 시에만 포인트를 지급합니다.</p>
-
-		<a href="#" class="First_Account_Enrollment"> <span class="blind"> 첫 계좌등록 하고 500원 받기 </span> </a>
-
-		<!-- <a href="#" class="Total_Account_Enrollment"></a> -->
-
-
-	</div>
+  </header>
 
 
 
-	<div class="section1_text">
-		<p class="txt_area">
-			※ 통합계좌조회 하고 첫 계좌등록 시 500원 추가 지급되며, (총 1천원 지급)<br>
-			첫 계좌등록 이후에 통합계좌조회 하시면 500원 추가 지급되지 않습니다.
-		</p>
+  <div class="banner">
 
-	</div>
-
-	<div class="section2">
-		<a href="#" class="more_btn"></a>
-		<strong>포인트 충전 혜택</strong>
-		<p>5만원 이상 충전하면 2% 즉시 적립! 포인트 충전 받으세요!</p>
-	</div>
+    <h2>친구야, 계좌결제 아직도 안쓰니?</h2>
+    <strong>첫 계좌등록하고 500원, 친구추천하고 200원씩 받자!</strong>
 
 
-	<div class="section3">
-		<a href="#" class="more_btn"></a>
-		<strong>케이뱅크 X Pay통장<strong>
-			<p>10만원 이상 결제하면 매월 3천원! 충전하면 매일 100원!<br>
-				*상세조건 이벤트 페이지 참조
-			</p>
-		</div>
+  </div>
+
+  <div class="section1">
+    <h3>네이버페이 생에 첫 계좌등록시 500원, 통합계좌조회 하고 첫 등록하면 추가 500원 지급!</h3>
+    <strong>지금 바로 등록하세요! 롸잇나~우!</strong>
+    <p>실명확인 기준으로 첫 계좌등록 시에만 포인트를 지급합니다.</p>
+
+    <a href="#" class="First_Account_Enrollment"> <span class="blind"> 첫 계좌등록 하고 500원 받기 </span> </a>
+
+    <!-- <a href="#" class="Total_Account_Enrollment"></a> -->
+
+
+  </div>
 
 
 
-		<div class="section4">
-			<a href="#" class="Referrer_input_button"></a>
-		</div>
+  <div class="section1_text">
+    <p class="txt_area">
+      ※ 통합계좌조회 하고 첫 계좌등록 시 500원 추가 지급되며, (총 1천원 지급)<br>
+      첫 계좌등록 이후에 통합계좌조회 하시면 500원 추가 지급되지 않습니다.
+    </p>
+
+  </div>
+
+  <div class="section2">
+    <a href="#" class="more_btn"></a>
+    <strong>포인트 충전 혜택</strong>
+    <p>5만원 이상 충전하면 2% 즉시 적립! 포인트 충전 받으세요!</p>
+  </div>
+
+
+  <div class="section3">
+    <a href="#" class="more_btn"></a>
+    <strong>케이뱅크 X Pay통장<strong>
+      <p>10만원 이상 결제하면 매월 3천원! 충전하면 매일 100원!<br>
+        *상세조건 이벤트 페이지 참조
+      </p>
+    </div>
 
 
 
-		<div class="section5">
-			<div class="notice">
-
-				<strong>꼭 알아두세요!</strong>
-				<ul>
-					<li>신규로 계좌등록을 마치신 분들만 참여하실 수 있습니다.(기존회원 불가)</li>
-					<li>기존 회원분들은 주변에 아직 계좌등록 안 쓰시는 분들께 많이 소문내주세요! 친구분들이 계좌등록하고 본인 아이디를 입력해주시면,추천인 혜택을 받으실 수 있습니다.</li>
-					<li>상세 내용은 추천인 입력 페이지에서 확인하실 수 있습니다.</li>
-					<li>부적절한 방법을 통한 응모는 모두 취소처리 되며, 법적인 처벌을 받을 수 있습니다.</li>
-				</ul>
-
-			</div>
-		</div>
-
-
-		<div class="section6">
-
-
-		</div>
+    <div class="section4">
+      <a href="#" class="Referrer_input_button"></a>
+    </div>
 
 
 
+    <div class="section5">
+      <div class="notice">
 
-<div class="footer" id="footer">
+        <strong>꼭 알아두세요!</strong>
 
-    <div class="section_rolling">
+        <ul>
+          <li>신규로 계좌등록을 마치신 분들만 참여하실 수 있습니다.(기존회원 불가)</li>
+          <li>기존 회원분들은 주변에 아직 계좌등록 안 쓰시는 분들께 많이 소문내주세요! 친구분들이 계좌등록하고 본인 아이디를 입력해주시면,추천인 혜택을 받으실 수 있습니다.</li>
+          <li>상세 내용은 추천인 입력 페이지에서 확인하실 수 있습니다.</li>
+          <li>부적절한 방법을 통한 응모는 모두 취소처리 되며, 법적인 처벌을 받을 수 있습니다.</li>
+        </ul>
 
-     <div class="inner_rolling">
-
-      <strong class="tit_other">다른 이벤트</strong>
-
-      <div class="rolling swiper-container swiper-container-horizontal" id="rolling">
-       <ul style="width:1890px" class="swiper-wrapper"><li class="swiper-slide swiper-slide-active"><a href="https://campaign.naver.com/event/myallaccount" target="_blank"><img alt="통합계좌조회로 내 계좌를 한번에 볼 수 있습니다" height="200" src="https://phinf.pstatic.net/checkout/20190906_170/1567749028604YqKLV_JPEG/210X200.jpg" width="210"></a></li><li class="swiper-slide swiper-slide-next"><a href="https://campaign.naver.com/event/kbank-y5" target="_blank"><img alt="케네통장 이벤트" height="200" src="https://phinf.pstatic.net/checkout/20190819_68/1566179327317kq07e_JPEG/210x200.jpg" width="210"></a></li><li class="swiper-slide"><a href="https://campaign.naver.com/event/npay-internetregistration_1909" target="_blank"><img alt="인터넷 가입 하고 네이버페이 최대 45만원 받자" height="200" src="https://phinf.pstatic.net/checkout/20190920_184/1568964877017wHo71_PNG/210x200.png" width="210"></a></li><li class="swiper-slide"><a href="https://campaign.naver.com/event/npay-uphone_1910" target="_blank"><img alt="민병철유폰 이벤트" height="200" src="https://phinf.pstatic.net/checkout/20190926_235/15694739025887oGnX_PNG/210x200.png" width="210"></a></li><li class="swiper-slide"><a href="https://campaign.naver.com/event/npay-wooricardcredit_1910" target="_blank"><img alt="우리카드와 함께라면 최대 6만원 혜택" height="200" src="https://phinf.pstatic.net/checkout/20191001_280/1569909705084fa50b_PNG/210x200.png" width="210"></a></li><li class="swiper-slide"><a href="https://campaign.naver.com/event/npay-wooricardcheck_1910" target="_blank"><img alt="네이버페이 포인트 최대 1만원 지급" height="200" src="https://phinf.pstatic.net/checkout/20191001_264/1569902270952pLyYD_JPEG/210x200.jpg" width="210"></a></li><li class="swiper-slide"><a href="https://campaign.naver.com/event/npay-samsungtaptapo_1910" target="_blank"><img alt="삼성카드 네이버페이 포인트 이벤트" height="200" src="https://phinf.pstatic.net/checkout/20190926_203/1569473645385soqzb_PNG/210x200.png" width="210"></a></li><li class="swiper-slide"><a href="https://campaign.naver.com/event/pointadd2_01" target="_blank"><img alt="포인트 충전 혜택 보기" height="200" src="https://phinf.pstatic.net/checkout/20190827_87/1566876254154Db0iq_PNG/210x200.png" width="210"></a></li><li class="swiper-slide"><a href="http://campaign.naver.com/event/npay-myshinhanpoint" target="_blank"><img alt="아껴둔 신한포인트 네이버페이로 전환하세요" height="200" src="https://phinf.pstatic.net/checkout/20180813_96/GW10386_1534130116496SJObK_JPEG/210x200.jpg" width="210"></a></li><li class="swiper-slide"><a href="https://campaign.naver.com/event/taptapcard_1910" target="_blank"><img alt="삼성제휴카드 이벤트" height="200" src="https://phinf.pstatic.net/checkout/20190930_233/1569829479033smMTh_JPEG/210x200.jpg" width="210"></a></li></ul>
       </div>
-      <a class="btn_rolling btn_prev swiper-button-disabled" href="#" role="button"><span class="blind">이전</span></a>
-      <a class="btn_rolling btn_next" href="#" role="button"><span class="blind">다음</span></a>
-     </div>
     </div>
-    <div class="inner_footer">
-     <ul class="section_sns">
-      <li class="item_sns"><a class="link_sns facbook" href="#">페이스북</a></li>
-      <li class="item_sns"><a class="link_sns twitter" href="#">트위터</a></li>
-      <li class="item_sns"><a class="link_sns band" href="#">밴드</a></li>
-      <li class="item_sns"><a class="link_sns blog" href="#">블로그</a></li>
-      <li class="item_sns"><a class="link_sns cafe" href="#">카페</a></li>
-      <li class="item_sns"><a class="link_sns pholar" href="#">폴라</a></li>
-     </ul>
-     <div class="section_copy">
-      <p>Copyright<em>©</em><a href="http://www.navercorp.com/" target="_blank"> NAVER Corp. </a> All Rights Reserved.</p>
-     </div>
+
+
+    <div class="section6">
+
+
     </div>
-   </div>
+
+
+
+
+    <div class="footer" id="footer">
+
+      <div class="section_rolling">
+
+        <div class="inner_rolling">
+
+          <strong class="tit_other">다른 이벤트</strong>
+          <div class="rolling swiper-container swiper-container-horizontal" id="rolling">
+            <ul style="width:1890px" class="swiper-wrapper">
+              <li class="swiper-slide swiper-slide-active"><a href="https://campaign.naver.com/event/myallaccount" target="_blank">
+                <img alt="통합계좌조회로 내 계좌를 한번에 볼 수 있습니다" height="200" src="img/list1.jpg"
+                width="210"></a></li>
+                <li class="swiper-slide swiper-slide-active"><a href="https://campaign.naver.com/event/myallaccount" target="_blank">
+                  <img alt="통합계좌조회로 내 계좌를 한번에 볼 수 있습니다" height="200" src="img/list2.jpg"
+                  width="210"></a></li>
+                  <li class="swiper-slide swiper-slide-active"><a href="https://campaign.naver.com/event/myallaccount" target="_blank">
+                    <img alt="통합계좌조회로 내 계좌를 한번에 볼 수 있습니다" height="200" src="img/list3.jpg"
+                    width="210"></a></li>
+                    <li class="swiper-slide swiper-slide-active"><a href="https://campaign.naver.com/event/myallaccount" target="_blank">
+                      <img alt="통합계좌조회로 내 계좌를 한번에 볼 수 있습니다" height="200" src="img/list4.jpg"
+                      width="210"></a></li>
+                    </ul>
+                  </div>
+
+
+                  <a class="btn_rolling btn_prev swiper-button-disabled" href="#" role="button"><span class="blind">이전</span></a>
+                  <a class="btn_rolling btn_next" href="#" role="button"><span class="blind">다음</span></a>
+                </div>
+              </div>
+
+
+
+              <div class="inner_footer">
+                <ul class="section_sns">
+                  <li class="item_sns"><a class="link_sns facbook" href="#">페이스북</a></li>
+                  <li class="item_sns"><a class="link_sns twitter" href="#">트위터</a></li>
+                  <li class="item_sns"><a class="link_sns band" href="#">밴드</a></li>
+                  <li class="item_sns"><a class="link_sns blog" href="#">블로그</a></li>
+                  <li class="item_sns"><a class="link_sns cafe" href="#">카페</a></li>
+                  <li class="item_sns"><a class="link_sns pholar" href="#">폴라</a></li>
+                </ul>
+                <div class="section_copy">
+                  <p>Copyright<em>©</em><a href="http://www.navercorp.com/" target="_blank"> NAVER Corp. </a> All Rights Reserved.</p>
+                </div>
+              </div>
+            </div>
 
 
 
 
 
 
-		<footer>
+            <footer>
 
-		</footer>
-
-
-
-	</body>
+            </footer>
 
 
-	</html>
+
+          </body>
+
+
+          </html>
